[gd_scene load_steps=3 format=3 uid="uid://cn2e7bnjx0moa"]

[ext_resource type="PackedScene" uid="uid://bibasatxhl56l" path="res://scenes/pixel_label.tscn" id="1_ixa16"]
[ext_resource type="Script" uid="uid://b1x2pheha8tvy" path="res://scripts/tooltip/relation_change.gd" id="1_koo7b"]

[node name="RelationChange" type="HBoxContainer"]
script = ExtResource("1_koo7b")
good_color = Color(0, 0.290196, 0, 1)

[node name="TargetLabel" parent="." instance=ExtResource("1_ixa16")]
layout_mode = 2
text = "Dwarfs"

[node name="ValueLabel" parent="." instance=ExtResource("1_ixa16")]
layout_mode = 2
theme_override_colors/font_color = Color(3.54964e-07, 0.290631, 3.85046e-07, 1)
text = "+10"
color = Color(3.54964e-07, 0.290631, 3.85046e-07, 1)
